# quackbox

./: .envrc  .gitignore  AGENTS.md  README.md  eslint.config.js  flake.nix  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
api/: Cargo.toml  bacon.toml
api/.cargo/: config.toml
api/bindings/: Rooms.ts  Verdict.ts
api/src/: config.rs  main.rs  protocol.rs  state.rs
api/src/data/: board.rs  error.rs  grid_quiz.rs  loader.rs  mod.rs  query.rs  test_helpers.rs  validate.rs
api/src/data/loader/: games.rs  mod.rs  overlays.rs  packs.rs  questions.rs  tags.rs
api/src/data/loader/tests/: fixtures.rs  games.rs  integration.rs  mod.rs  overlays.rs  packs.rs  questions.rs
api/src/data/types/: board.rs  common.rs  game.rs  media.rs  mod.rs  overlay.rs  pack.rs  question.rs  tag.rs
api/src/data/validate/: game_refs.rs  media.rs  mod.rs  overlay_refs.rs  pack_cycles.rs  refs.rs  tag_refs.rs
api/src/data/validate/tests/: games.rs  media.rs  mod.rs  overlays.rs  refs.rs  tags_cycles.rs
api/src/game/: grants.rs  judge.rs  mod.rs  project.rs  room.rs  state.rs
api/src/http/: mod.rs  ws.rs
api/src/http/rest/: boards.rs  games.rs  mod.rs  packs.rs  rooms.rs  stats.rs
docs/: architecture.md  data-model.md  effect-assessment.md  game-flow.md  glossary.md
messages/: de.json  en.json
nix/: devshell.nix  package.nix
schemas/: board.schema.json  pack-overlay.schema.json  pack.schema.json  question-overlay.schema.json  question.schema.json  tag-overlay-audience.schema.json  tag-overlay-difficulty.schema.json  tag-overlay-format.schema.json  tag-overlay-region.schema.json  tag-overlay-subject.schema.json  tag-overlay-warning.schema.json  tag-registry-audience.schema.json  tag-registry-difficulty.schema.json  (+4 more)
scripts/: gen-schemas.ts  (+1 more)
(+130 files in other folders)
